--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <title>ABC WEB</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+<!-- Start of Sleeknote signup and lead generation tool - www.sleeknote.com -->
+<script id="sleeknoteScript" type="text/javascript">
+	(function () {
+		var sleeknoteScriptTag = document.createElement("script");
+		sleeknoteScriptTag.type = "text/javascript";
+		sleeknoteScriptTag.charset = "utf-8";
+		sleeknoteScriptTag.src = ("//sleeknotecustomerscripts.sleeknote.com/60968.js");
+		var s = document.getElementById("sleeknoteScript"); 
+		s.parentNode.insertBefore(sleeknoteScriptTag, s); 
+	})();
+</script>
+<!-- End of Sleeknote signup and lead generation tool - www.sleeknote.com -->
 </head>
 <body>
 <div style="height: 100%; width: 100%; background-image: url('busimg.png');">
@@ -52,7 +65,7 @@
 <br>
 <div class="container d-flex">
 <div class="card" style="width: 18rem;">
-  <img style="border-radius: 5px;" src="karsonmi.png" class="card-img-top" alt="Karson MI">
+  <img style="border-radius: 5px;" src="karsonrollintosummer.png" class="card-img-top" alt="Karson MI">
   <div class="card-body">
     <h5 class="card-title">Karson, MI</h5>
     <p class="card-text">This is Karson MI, and it is the only currently used map for Runs by American Bus Company.</p>
@@ -107,6 +120,7 @@
   </div>
   
 </div>
+<br>
 </div>
 <div id="guides" style="background-color: #fd7e14;">
 <br>
